--- a/index.html
+++ b/index.html
@@ -6,43 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- ——— SEO Basique ——— -->
-    <title>PetHome | Produits et services pour votre animal</title>
+    <!-- ——— SEO Basique ——— -->
+    <title>Maison pour Pets | Pension haut de gamme pour vos compagnons</title>
     <meta
       name="description"
-      content="Chez PetHome, découvrez nourriture, accessoires et conseils pour le bien-être de votre compagnon. Livraison gratuite dès 50 €."
+      content="Maison pour Pets, pension spécialisée pour chiens et chats : hébergement premium, suivi personnalisé et environnement sécurisé. Vos animaux méritent le meilleur."
     />
     <meta
       name="keywords"
-      content="animaux de compagnie, chien, chat, accessoires pour animaux, PetHome"
+      content="pension pour animaux, garde chiens, garde chats, pension haut de gamme, Maison pour Pets"
     />
-    <meta name="author" content="PetHome SARL" />
-    <link rel="canonical" href="https://maisonpourpets.com/" />
 
     <!-- ——— Open Graph ——— -->
-    <meta property="og:type" content="website" />
     <meta
       property="og:title"
-      content="PetHome | Produits et services pour votre animal"
+      content="Maison pour Pets | Pension haut de gamme pour vos compagnons"
     />
     <meta
       property="og:description"
-      content="Nourriture, jouets et conseils pour le bien-être de votre animal. Livraison Express 24 h !"
+      content="Confiez vos animaux à notre pension spécialisée : confort optimal, activités sur-mesure et encadrement professionnel."
     />
-    <meta property="og:url" content="https://maisonpourpets.com/" />
     <meta
       property="og:image"
       content="https://maisonpourpets.com/images/og-pethome.jpg"
     />
 
     <!-- ——— Twitter Card ——— -->
-    <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="PetHome | Produits et services pour votre animal"
+      content="Maison pour Pets | Pension haut de gamme pour vos compagnons"
     />
     <meta
       name="twitter:description"
-      content="Visitez PetHome : nourriture, accessoires et astuces pour prendre soin de votre compagnon."
+      content="Service de garde premium pour chiens et chats. Pension spécialisée, équipes expertes et suivi 24/7."
     />
     <meta
       name="twitter:image"
