--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       name="twitter:image"
       content="https://maisonpourpets.com/images/twitter-pethome.jpg"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Oregano&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
     <!-- ——— JSON-LD (données structurées) ——— -->
     <script type="application/ld+json">
@@ -60,8 +61,11 @@
       }
     </script>
   </head>
-  <body>
+  <body class="font-sans">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script src="https://kit.fontawesome.com/3d8f845060.js" crossorigin="anonymous"></script>
+
+
   </body>
 </html>
